# picomixer

./: .gitignore  CMakeLists.txt
.devcontainer/: devcontainer.json
pcb/picomixer/: TI-audio.kicad_sym  fp-info-cache  fp-lib-table  picomixer.kicad_prl  picomixer.kicad_pro  picomixer.kicad_sch  sym-lib-table
pcb/picomixer/ti-footprints.pretty/: WQFN24_RTW-S_TEX.kicad_mod
pcb/ti-footprints.pretty/: RGP20_2P7X2P7.kicad_mod  WQFN24_RTW-S_TEX-L.kicad_mod  WQFN24_RTW-S_TEX-M.kicad_mod
picomixer/: CMakeLists.txt  tdm_in.pio  tdm_out.pio
src/: blink.c  picomixer.c  tdm_out.pio
